--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,15 +9,11 @@
 <div class="parent">
     <div class="hdg">
         <div class="title">
-            <div><h1>AVAILABLE REPORTS</h1></div>
+            <div><h2>LIGHTSPEED INTERFACE</h2></div>
         </div>
         <div class="version">
-            <h3>ver. Jan 1, 2021</h3>
+            <h3>ver. Jan 2, 2021</h3>
         </div>  
-        <!-- <button id="settingsIcon" style="display:none"><i class="fas fa-bars" data-toggle='modal' data-target='#settingsModal'></i></button>
-        <button id="settingsBtn" style="display:none" type='button' class = 'btn btn-primary' data-toggle = 'modal' data-target = '#settingsModal'>
-                SETTINGS  
-        </button>     -->
     </div>
     <div id="printReportBtns">
         <div id="column1">
@@ -33,17 +29,11 @@
         </div>
    
         <div id="column2">
-            <div class="miscReports" style=margin-top:20px>
-                <!-- PRINT BUTTONS TO PROVIDE LINKS TO ROUTES -->
-                <ul style="list-style-type:none;">
-                    <!-- <li><button id='sendEmail' type="button" class='btn btn-sm btn-success'>SEND EMAIL</button></li>                 -->
-                    <li><button id='prtPresidentsReportID' type="button" onclick='PresidentsReport()' class='btn btn-sm btn-primary'>President's Report</button></li>
-                    <li><button id='prtMonitorTrainingID' type="button" class='btn btn-sm btn-primary'>Members by Monitor Training Date</button></li>
-                    <li><button id='prtMentorsID' type="button" onclick='Mentors()' class='btn btn-sm btn-primary'>Mentor List</button></li>
-                    <li><button id='prtContactsID' type="button" onclick='Contacts()' class='btn btn-sm btn-primary'>Contact List</button></li>
-                   
-                </ul>
-            </div>
+            <button class='btn btn-primary' onclick='retrieveCustomer()'>Retrieve a customer</button>
+           <h6>daily send address changes</h6>
+           <h6>daily send eMail changes</h6>
+           <h6>receive dues/initiation Transactions; compare to membership records</h6>
+
         </div>
 
         <div id="column3">
@@ -57,7 +47,7 @@
             <div class="memberReports">
                 <!-- PRINT BUTTONS TO PROVIDE LINKS TO ROUTES -->
                 <ul style="list-style-type:none;">
-                    <li><button id='prtMonitorTransactionsID' disabled onclick='Transactions()' type="button" class='btn btn-sm btn-primary'>Monitor Transactions</button></li>
+                    <li><button id='prtTransactionsID' disabled onclick='Transactions()' type="button" class='btn btn-sm btn-primary'>Transactions</button></li>
                 </ul>
             </div>
         </div>
