--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,7 +4,7 @@
     {{super()}}
     <!-- <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">   -->
 {% endblock %}
-{% block title %}Lightspeed Interface{% endblock title %}
+{% block title %}LIGHTSPEED INTERFACE{% endblock title %}
 {% block content %}
 <div class="container p-0 m-0">
 {% with messages = get_flashed_messages(with_categories=true) %}
