--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,7 +12,7 @@
             <div><h2>LIGHTSPEED INTERFACE</h2></div>
         </div>
         <div class="version">
-            <h3>ver. May 5, 2021</h3>
+            <h3>ver. May 6, 2021</h3>
         </div>  
     </div>
     <div id="printReportBtns">
@@ -34,6 +34,7 @@
             <h6>receive dues/initiation Transactions; compare to membership records</h6>
             <h6>List Recent Sales</h6>
             <button type="button" class='btn btn-sm btn-primary' onclick='retrieveCustomerByID()'>Get Customer by ID - 1</button>
+            <button type="button" class='btn btn-sm btn-primary' onclick='addCustomer()'>Test Add Customer</button>
         </div>
 
         <div id="column3">
