--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,7 +12,7 @@
             <div><h2>LIGHTSPEED INTERFACE</h2></div>
         </div>
         <div class="version">
-            <h3>ver. Jun 24, 2021</h3>
+            <h3>ver. Jun 25, 2021</h3>
         </div>  
     </div>
     <div id="printReportBtns">
@@ -29,7 +29,7 @@
         </div>
    
         <div id="column2">
-            <button type="button" class='btn btn-sm btn-primary' onclick='updateLightspeedID()'>Update Lightspeed ID</button>
+            <button id='updateLightspeedID' type="button" class='btn btn-sm btn-primary' onclick='updateLightspeedID()'>Update Lightspeed ID</button>
             <h6>daily send eMail changes</h6>
             <h6>receive dues/initiation Transactions; compare to membership records</h6>
             <h6>List Recent Sales</h6>
