--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,7 +12,7 @@
             <div><h2>LIGHTSPEED INTERFACE</h2></div>
         </div>
         <div class="version">
-            <h3>ver. Jul 31, 2021</h3>
+            <h3>ver. Aug 1, 2021</h3>
         </div>  
     </div>
     <div id="printReportBtns">
@@ -29,18 +29,18 @@
         </div>
    
         <div id="column2">
-            <button id='updateLightspeedID' type="button" class='btn btn-sm btn-primary' onclick='updateLightspeedID()'>Update Lightspeed ID</button>
-            <h6>daily send eMail changes</h6>
+            <button id='updateLightspeedID' type="button" class='btn btn-sm btn-primary' onclick='updateLightspeedID()'>Update VWC DB w/Lightspeed IDs</button>
+            <!-- <h6>daily send eMail changes</h6>
             <h6>receive dues/initiation Transactions; compare to membership records</h6>
-            <h6>List Recent Sales</h6>
+            <h6>List Recent Sales</h6> -->
             <div>
                 <label for="lightSpeedID">Lightspeed ID - </label>
-                <input type="text" id="lightSpeedID" style=width:50px>
+                <input type="text" id="lightSpeedID" style=width:50px value = ''>
                 <button type="button" class='btn btn-sm btn-primary' style=width:200px onclick='retrieveCustomerByID()'>Get Customer</button>
             </div>
             
             
-            <button type="button" class='btn btn-sm btn-primary' onclick='addCustomer()'>Test Add Customer</button>
+            <!-- <button type="button" class='btn btn-sm btn-primary' onclick='addCustomer()'>Test Add Customer</button> -->
         </div>
 
         <div id="column3">
