--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,7 +12,7 @@
             <div><h2>LIGHTSPEED INTERFACE</h2></div>
         </div>
         <div class="version">
-            <h3>ver. Aug 1, 2021</h3>
+            <h3>ver. Aug 2, 2021</h3>
         </div>  
     </div>
     <div id="printReportBtns">
@@ -40,7 +40,7 @@
             </div>
             
             
-            <!-- <button type="button" class='btn btn-sm btn-primary' onclick='addCustomer()'>Test Add Customer</button> -->
+            <button type="button" class='btn btn-sm btn-primary' onclick='addCustomer()'>Test Add Customer</button>
         </div>
 
         <div id="column3">
@@ -62,7 +62,7 @@
                 <ul style="list-style-type:none;">
                     <li><button id='getCustByPythonID' class='btn btn-primary' disabled onclick="retrieveCustomerByVillageID()">Retrieve a customer by Village ID)</button></li>
                     <li>{{lsID}}{{memberName}}{{villageID}}</li>
-                    <li><button id='prtTransactionsID' disabled onclick='listTransactions()' type="button" class='btn btn-sm btn-primary'>Transactions</button></li>
+                    <li><button id='prtTransactionsID'  onclick='listTransactions()' type="button" class='btn btn-sm btn-primary'>Transactions</button></li>
                     <!-- <li><button id='getCustBYjsID' class='btn btn-primary' disabled onclick='retrieveCustomerJS()'>Retrieve a customer (via js)</button></li> -->
                 </ul>
             </div>
