--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,11 +12,17 @@
             <div><h2>LIGHTSPEED INTERFACE</h2></div>
         </div>
         <div class="version">
-            <h3>ver. Sep 8, 2021</h3>
+            <h3>ver. Sep 15, 2021</h3>
         </div>  
+    </div>
+    <div>
+        <h6>Members without a lightspeed ID (or not in Lightspeed database) -  {{withoutLightspeedID}}</h6>
     </div>
     <div id="printReportBtns">
         <div id="column1">
+            <div>
+                <button id='updatelightspeedID' type="button" class='btn btn-sm btn-primary' onclick='updatelightspeedID()'>Update VWC DB w/Lightspeed IDs</button>
+            </div>
             <div id="location" style=margin-top:20px>
                 <form class = "filterItems "></form>
                     <label for="shopChoice">Location: </label>
@@ -29,17 +35,23 @@
         </div>
    
         <div id="column2">
-            <button id='updatelightspeedID' type="button" class='btn btn-sm btn-primary' onclick='updatelightspeedID()'>Update VWC DB w/Lightspeed IDs</button>
+            
             <!-- <h6>daily send eMail changes</h6>
             <h6>receive dues/initiation Transactions; compare to membership records</h6>
             <h6>List Recent Sales</h6> -->
             <div>
                 <label for="lightspeedID">Lightspeed ID - </label>
                 <input type="text" id="lightspeedID" style=width:50px value = ''>
-                <button type="button" class='btn btn-sm btn-primary' style=width:200px onclick='retrieveCustomerByID()'>Get Customer</button>
             </div>
-            
-            
+            <div>
+                <button type="button"
+                    class='btn btn-sm btn-primary' 
+                    style=width:250px 
+                    onclick='retrieveCustomerByLightspeedID()'>
+                    Display Data In Lightspeed Database</button>
+            </div>
+            <br>
+            <br>
             <button type="button" class='btn btn-sm btn-primary' onclick='addCustomer()'>Test Add Customer</button>
         </div>
 
@@ -50,8 +62,8 @@
                     <option 
                         class="optName" 
                         value='{{n.memberName}}' 
-                        data-memberID='{{n.memberID}}' 
-                        data-ls='{{n.lightspeedID}}'
+                        data-lightspeedID='{{n.lightspeedID}}'
+                        data-memberID='{{n.memberID}}'
                     </option>{{n.memberName}}</option>
                 {% endfor %}
                 </select>
@@ -60,9 +72,9 @@
             <div class="memberReports">
                 <!-- PRINT BUTTONS TO PROVIDE LINKS TO ROUTES -->
                 <ul style="list-style-type:none;">
-                    <li><button id='getCustByPythonID' class='btn btn-primary' disabled onclick="retrieveCustomerByVillageID()">Retrieve a customer by Village ID)</button></li>
+                    <li><button id='getCustByPythonID' class='btn btn-primary' disabled onclick="retrieveCustomerByVillageID()">Display selected customer</button></li>
                     <li>{{lsID}}{{memberName}}{{villageID}}</li>
-                    <li><button id='prtTransactionsID'  onclick='listTransactions()' type="button" class='btn btn-sm btn-primary'>List Transactions</button></li>
+                    <li><button id='prtTransactionsID'  onclick='listTransactions()' type="button" class='btn btn-sm btn-primary'>List Member's Sales Transactions</button></li>
                     
                     <!-- <li><button id='getCustBYjsID' class='btn btn-primary' disabled onclick='retrieveCustomerJS()'>Retrieve a customer (via js)</button></li> -->
                 </ul>
