--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,10 +12,10 @@
             <div><h2>LIGHTSPEED INTERFACE</h2></div>
         </div>
         <div class="version" style=text-align:right>
-            <h3>ver. Sep 22, 2021</h3>
+            <h3>ver. Sep 28, 2021</h3>
         </div>  
     </div>
-    <div>
+    <div class="hdg2">
         <h6>Members without a lightspeed ID (or not in Lightspeed database) -  {{withoutLightspeedID}}</h6>
     </div>
     <div id="printReportBtns">
