--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,7 +12,7 @@
             <div><h2>LIGHTSPEED INTERFACE</h2></div>
         </div>
         <div class="version" style=text-align:right>
-            <h3>ver. Sep 28, 2021</h3>
+            <h3>ver. Oct 1, 2021</h3>
         </div>  
     </div>
     <div class="hdg2">
@@ -94,7 +94,7 @@
 				<span aria-hidden="true">&times;</span>
 				</button>
 			</div>
-			<div class="modal-body" id=modalBody style=text-align:center>
+			<div class="modal-body" id=modalBody style=width:fit-content>
 			</div>
 			
 				<div class="modal-footer">
