--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -5,255 +5,67 @@
     --main-body-bg-color: lightgray;
   }
                          
+/* Phone layout (default) */
+@media only screen and (max-width: 600px) {
+    body {
+        background-color: var(--main-body-bg-color);
+    }
+}
+    .parent {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+        grid-template-areas:"hdgArea" 
+                            "versionArea"
+                            "selectMemberArea"
+                            "contactInfoArea";
+        grid-gap:0em;
+        border-color: black; 
+        background-color: lightgray;               
+    }
+    .heading {
+        grid-area: hdgArea;
+        display:grid;
+        padding-top: 0px;
+        padding-bottom:0px;
+        text-align: center;
+        background-color:navy;
+        color: var(--main-txt-color);
+        border-bottom:white 3px;
+    }
 
-.parent {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto;
-    grid-template-areas:"hdgArea" 
-                        "versionArea"
-                        "prtRptArea";
-    grid-gap:1em;
-    background-color:lightgray;                
-}
-.hdg {
-    grid-area: hdgArea;
-    display:grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-areas: "titleArea  versionArea";
-    padding-top: 0px;
-    text-align: center;
-    background-color:navy;
-    color: var(--main-txt-color);
-    border-bottom:white 3px;
-}
-.hdg2 {
-    background-color: lightgrey;
-    width: 876px;
-    padding-top:15px;
-    text-align: center;
-}
-.title {
-    grid-area:titleArea;
-    padding-top:2px;
-    font-size:1rem;
-    padding-left:10px;
-}
-.version {
-    grid-area:versionArea;
-    font-size:.75rem;
-    padding-top:5px;
-    align-items: right;
-    padding-right: 10px;
-}
-
-#location {
-    grid-area:locationArea;
-    padding-top:0px;
-    text-align: center;
-    background-color: lightgray;
-    color: navy;
-}
-
-#printReportBtns {
-    grid-area:prtRptArea;
-    display:grid;
-    grid-template-rows: auto;
-    grid-template-columns:1fr 1fr 1fr;
-    grid-template-areas: "column1 column2  column3";
-    width:100%;
-    align-content: center;
-    text-align: center;
-    padding-top:0px;
-    padding-left:0px;
-    margin-right:0px;
-    background-color: lightgray;
-}
-#column1 {
-    background-color: lightgray;
-    border:1px solid navy;
-}
-#column2 {
-    height:300px;
-    background-color: lightgray;
-    border:1px solid navy;
-}
-#column3 {
-    background-color: lightgray;
-    border:1px solid navy;
-}
-/* #printReportBtns .active {
-    transform: translateY(3px);
-    filter:saturate(50%);
-  } */
-#printReportBtns ul {
-    padding-left:0px;
-    margin-left:0px;
-    padding-right:0px;
-    margin-right:0px;
-    margin:auto;
-}
-#printReportBtns li {
-    padding-right:0px;
-    margin-right:0px;
-}
-#printReportBtns button {
-    border-radius: 5px;
-    margin-bottom:5px;
-    width:250px;
-    margin-right:0px;
-    padding-right:0px;
-}
-#memberOptions {
-	text-align: center;
-	height: 40px;
-	align-content: center;
-	justify-content: center;
-	padding-bottom:20px;
-	color:white;
-	margin-top:0px;
-	margin-bottom:10px;
-}
-
-#attachmentCheckboxes {
-    grid-area:rptNameArea;
-    width:200px;
-    padding-left: 20px;
-    background-color:lightgray;
-    color:navy;
-    border:1px solid navy
-} 
-#attachmentCheckboxes form button {
-    width:150px;
-    height:50px;
-    margin-top:10px;
-    margin-bottom:20px;
-    margin-left:0px;
-    margin-right:0px;
-    padding:0px;
-    border-radius: 5px; 
-} 
-
-/* EMAIL RECIPIENTS SECTION OF PAGE */
-#emailSection {
-    grid-area: emailArea;
-    display:grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-areas:"sendToArea     emailBody   emailBody   emailBody   emailButtons";
-    background-color:lightsteelblue;
-    padding-top:20px;
-    border:1px solid navy;
-}
-
-/* LEFT COLUMN */
-#sendToOptions {
-    grid-area:sendToArea; 
-    border: 1px solid black;
-    padding-top:15px;
-    padding-bottom: 40px;
-    padding-left:20px;
-    margin-left: 20px;
-    margin-right:10px;
-    width:250px;
-    height:200px;
-    color:navy;
-}
-#sendToOptions button {
-    width:200px;
-    border-radius: 5px;
-    margin-top:5px;
-}
-#sendToOptions .active {
-    transform: translateY(3px);
-    filter:saturate(50%);
-    /* background-color: red;
-    color: white; */
-  }
-
-
-/*  MIDDLE COLUMN */
-#eMailBody {
-    grid-area:emailBody;
-    margin-left:100px
-}
-
-#emailRecipient {
-    grid-area:emailBody;
-    color:navy;
-    margin-left:20px;
-} 
-
-#emailSubject{
-    grid-area:emailBody;
-    color:navy;
-    margin-top:10px;
-    margin-left:20px;
-    
-}
-#emailMessage {
-    grid-area:emailBody;
-    color:black;
-    margin-top:10px;
-    margin-left:20px;   
-}
-#eMailMsgID {
-    border:1px solid navy;
-    padding:10px;
-}
-
-/* RIGHT COLUMN */
-#emailButtons {
-    grid-area:emailButtons;
-    border: 1px solid black;
-    padding-top:0px;
-    padding-bottom: 5px;
-    padding-left:20px;
-    margin-right:20px;
-    width:150px;
-    height:125px;
-    color:navy;
-    
-    /* margin-top:0px;
-    margin-right:0px;
-    color:navy;
-    text-align:center; */
-}
-#emailButtons button {
-    width:125px;
-    border-radius:5px;
-    margin-top:5px;
-}
-
-#emailButtons .active {
-    transform: translateY(3px);
-    filter:saturate(50%);
-    /* background-color: red;
-    color: white; */
-  }
-
-.emailClass:active {
-    transform: translateY(1px);
-    filter:saturate(150%);
-}
-/* EMAIL SEND SAVE DONE BUTTONS */
-/* #emailSendBtns {
-    grid-area:emailBtnsArea;
-    background-color: lightgray;
-    color:navy; 
-}*/
-
-
-textarea {
-    overflow-y: scroll;
-}
-#modalLookupID {
-    height:600px;
-}
-#memberSelectID {
-    width:200px;
-    height:600px;
-
-}
+    .version {
+        grid-area:versionArea;
+        font-size:.75rem;
+        padding-top:3px;
+        align-items: center;
+        text-align: center;
+        background-color: navy;
+        color:white;
+    }
+    .selectMember {
+        text-align: center;
+        align-content: center;
+        justify-content: center;
+        padding-top:0px;
+        padding-bottom:0px;
+    }
+    .contactInfo {
+        margin-top:20px;
+        background-color:lightgray;
+        padding-right:20px;
+    }
+    .contactLabel {
+        display:inline-block;
+        width:150px;
+        text-align:right;
+        background-color: lightgray;
+        color:black;
+    }
+    .contactData {
+        background-color:lightgray;
+        color:blue;
+    }
 .modal-dialog {
     width:900px;
     height:600px !important;
@@ -265,64 +77,84 @@ textarea {
 .modal-body {
     overflow: scroll;
 }
+
 /* iPad portrait */
 @media (min-width: 768px) {
     .parent {
         width:80%;
         display: grid;
-        grid-template-columns:1fr;
-        grid-template-rows:50px 1fr;
-        grid-template-areas: "hdgArea"  
-                            "locationArea"
-                            "prtRptArea";
+        grid-template-columns:1fr 1fr;
+        grid-template-areas: "hdgArea versionArea"
+                             "selectMemberArea selectMemberArea"
+                             "contactInfoArea contactInfoArea";  
         gap:0px;
-        background-color:var(--main-body-bg-color);
-        
         margin:auto; 
         margin-top: 100px;
         
     }
-    /* .hdg {
-        grid-area: hdgArea; 
-        display:grid;
-        grid-template-rows: 1fr 1fr 1fr 1fr;
-        grid-template-columns:1fr 1fr;
-        grid-template-areas: " searchArea searchArea",
-                                "memberNameArea memberNameArea",
-                                "versionArea staffNameArea",
-                                ".  menuArea";
-        height:4rem;
-        background-color: var(--main-hdg-bg-color); 
-        color:var(--main-hdg-txt-color);
-        
-    } */
-
-    /* body {font-size:.75rem}
-    .localContactInfo {
-        font-size:.75rem;
-    } */
+    
 }
 
 /* Laptop to monitor size */
 @media (min-width: 992px) {
     .parent {
-        position: relative;
-        width:60%;
+        width:90%;
         display: grid;
-        grid-template-columns:1fr;
-        grid-template-rows:50px 50px 1fr;
-        grid-template-areas:    "hdgArea"
-                                "locationArea"
-                                "prtRptArea";
+        grid-template-columns:1fr 1fr;
+        grid-template-rows:1fr auto;
+        grid-template-areas:    "hdgArea versionArea"
+                                "selectMemberArea contactInfoArea";
         gap:0px;
-        background-color:var(--main-body-bg-color);
+        background-color:lightgray;
         top:0; bottom:0; left:0; right:0;
-
     }
-   
-    #location {
-        margin-top:10px;
+    .heading {
+        grid-area: hdgArea;
+        padding-top: 0px;
+        padding-bottom:0px;
+        padding-left:10px;
+        text-align: left;
+        background-color:navy;
+        color: var(--main-txt-color);
+        border-bottom:white 3px;
     }
-    
 
+    .version {
+        grid-area:versionArea;
+        font-size:.75rem;
+        padding-top:3px;
+        padding-right:10px;
+        align-items: center;
+        text-align: right;
+        background-color: navy;
+        color:white;
+    }
+    .selectMember {
+        text-align: center;
+        height: 60px;
+        align-content: center;
+        justify-content: center;
+        padding-top:20px;
+        padding-bottom:0px;
+        color:white;
+        background-color: lightgray;
+        margin-top:0px;
+        margin-bottom:00px;
+    }
+    .contactInfo {
+        border-color: blue;
+        border-radius: 10%;
+        background-color: white;
+    }
+    .contactLabel {
+        display:inline-block;
+        width:150px;
+        text-align:right;
+        background-color: lightgray;
+        color:black;
+    }
+    .contactData {
+        background-color:lightgray;
+        color:blue;
+    }
 }
