--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -4,7 +4,6 @@
     --main-padding: 10px;  
     --main-body-bg-color: lightgray;
   }
-                         
 /* Phone layout (default) */
 @media only screen and (max-width: 600px) {
     body {
@@ -14,11 +13,14 @@
     .parent {
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: auto;
+        grid-template-rows: 40px 30px 30px 30px 30px 30px 200px;
         grid-template-areas:"hdgArea" 
                             "versionArea"
-                            "selectMemberArea"
-                            "contactInfoArea";
+                            "locationsArea"
+                            "machinesArea"
+                            "membersArea"
+                            "instructorsArea"
+                            "detailArea";
         grid-gap:0em;
         border-color: black; 
         background-color: lightgray;               
@@ -38,34 +40,79 @@
         grid-area:versionArea;
         font-size:.75rem;
         padding-top:3px;
-        align-items: center;
-        text-align: center;
+        text-align:center;
         background-color: navy;
         color:white;
     }
-    .selectMember {
-        text-align: center;
-        align-content: center;
-        justify-content: center;
-        padding-top:0px;
+    
+    .locations {
+        grid-area:locationsArea;
+        padding-top:5px;
         padding-bottom:0px;
+        padding-left:0px;
+        margin:auto;
     }
-    .contactInfo {
-        margin-top:20px;
-        background-color:lightgray;
-        padding-right:20px;
+    #locationSelected {
+        width:175px;
     }
-    .contactLabel {
-        display:inline-block;
-        width:150px;
-        text-align:right;
-        background-color: lightgray;
-        color:black;
+    .machines {
+        grid-area:machinesArea;
+        padding-top:5px;
+        padding-bottom:0px;
+        padding-left:0px;
+        margin:auto;
     }
-    .contactData {
-        background-color:lightgray;
-        color:blue;
+    #machineSelected {
+        width:200px;
     }
+    
+    .members {
+        grid-area:membersArea;
+        padding-top:5px;
+        padding-bottom:0px;
+        padding-left:0px;
+        margin:auto;
+    }                         
+    #memberSelected {
+        width:200px;
+    }
+
+    .instructors {
+        grid-area:instructorsArea;
+        padding-top:5px;
+        padding-bottom:0px;
+        padding-left:0px;
+        margin:auto;
+    }                         
+    #instructorSelected {
+        width:200px;
+    }
+
+    #machineSection {
+        grid-area:detailArea;
+        background-color: lightcoral;
+        border:2px solid black;
+        padding-top:10px;
+        margin-top:10px;
+        display:block;
+    }
+    #memberSection {
+        grid-area:detailArea;
+        background-color: lightblue;
+        border:2px solid black;
+        padding-top:10px;
+        margin-top:10px;
+        display:none;
+    }
+    #instructorSection {
+        grid-area:detailArea;
+        background-color: lightgreen;
+        border:2px solid black;
+        padding-top:10px;
+        margin-top:10px;
+        display:none;
+    }
+    
 .modal-dialog {
     width:900px;
     height:600px !important;
@@ -81,32 +128,96 @@
 /* iPad portrait */
 @media (min-width: 768px) {
     .parent {
-        width:80%;
+        width:100%;
         display: grid;
-        grid-template-columns:1fr 1fr;
-        grid-template-areas: "hdgArea versionArea"
-                             "selectMemberArea selectMemberArea"
-                             "contactInfoArea contactInfoArea";  
+        grid-template-columns:1fr 1fr 1fr;
+        grid-template-rows: 50px 30px 30px 30px 200px;
+        grid-template-areas: "hdgArea hdgArea versionArea"
+                             "locationsArea machinesArea machinesArea"
+                             ".             membersArea membersArea"
+                             ".             instructorsArea instructorsArea"
+                             ". detailArea .";  
         gap:0px;
-        margin:auto; 
-        margin-top: 100px;
+        margin:0 0; 
+        
         
     }
+    .heading {
+        grid-area: hdgArea;
+        display:grid;
+        padding-top: 0px;
+        padding-bottom:0px;
+        padding-left:20px;
+        text-align: left;
+        background-color:navy;
+        color: var(--main-txt-color);
+        border-bottom:white 3px;
+    }
+
+    .version {
+        grid-area:versionArea;
+        font-size:.75rem;
+        text-align:right;
+        padding-top:7px;
+        background-color: navy;
+        color:white;
+        padding-right:20px;
+    }
+    .locations {
+        grid-area:locationsArea;
+        padding-top:5px;
+        padding-bottom:0px;
+        margin:0px;
+        
+    }
+    .machines {
+        grid-area:machinesArea;
+        padding-top:5px;
+        padding-bottom:0px;
+        margin:0px;
+        
+    }
+    #machineSelected {
+        width:300px;
+    }
     
+    .members {
+        grid-area:membersArea;
+        padding-top:5px;
+        padding-bottom:0px;
+        margin:0px;
+        
+    }                         
+    #memberSelected {
+        width:300px;
+    }
+
+    .instructors {
+        grid-area:instructorsArea;
+        padding-top:0px;
+        padding-bottom:0px;
+        padding-left:0px;
+        margin:0;
+    }                         
+    #instructorSelected {
+        width:300px;
+    }
 }
 
 /* Laptop to monitor size */
 @media (min-width: 992px) {
     .parent {
-        width:90%;
+        width:100%;
         display: grid;
-        grid-template-columns:1fr 1fr;
-        grid-template-rows:1fr auto;
-        grid-template-areas:    "hdgArea versionArea"
-                                "selectMemberArea contactInfoArea";
+        grid-template-columns:1fr 1fr 1fr 1fr;
+        grid-template-rows: 50px 30px 30px 200px;
+        grid-template-areas:"hdgArea hdgArea hdgArea versionArea"
+                            "locationsArea machinesArea membersArea instructorsArea" 
+                            "detailArea . . .";
         gap:0px;
         background-color:lightgray;
         top:0; bottom:0; left:0; right:0;
+        /* border:4px solid red; */
     }
     .heading {
         grid-area: hdgArea;
@@ -122,29 +233,57 @@
     .version {
         grid-area:versionArea;
         font-size:.75rem;
-        padding-top:3px;
+        padding-top:5px;
         padding-right:10px;
         align-items: center;
         text-align: right;
         background-color: navy;
         color:white;
     }
-    .selectMember {
-        text-align: center;
-        height: 60px;
-        align-content: center;
-        justify-content: center;
-        padding-top:20px;
+
+    .locations {
+        grid-area:locationsArea;
+        padding-top:0px;
         padding-bottom:0px;
-        color:white;
-        background-color: lightgray;
-        margin-top:0px;
-        margin-bottom:00px;
+        margin:0;
+        width:100%;
+
     }
+    .machines {
+        grid-area:machinesArea;
+        padding-top:0px;
+        padding-bottom:0px;
+        margin:0;
+        width:100%;
+    }
+    #machineSelected {
+        width:300px;
+    }
+    
+    .members {
+        grid-area:membersArea;
+        padding-top:0px;
+        padding-bottom:0px;
+        margin:0;
+        width:100%;
+    }
+    #memberSelected {
+        width:300px;
+    }
+
+    .instructors {
+        grid-area:instructorsArea;
+        margin:auto;
+        width:100%;
+    }                         
+    #instructorSelected {
+        width:300px;
+    }
+    
     .contactInfo {
         border-color: blue;
         border-radius: 10%;
-        background-color: white;
+        background-color: lightgray;
     }
     .contactLabel {
         display:inline-block;
