--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,7 +15,7 @@
 
     <!-- VERSION SECTION -->
     <div class="version">
-        <h5>ver. Mar 30, 2022</h5>
+        <h5>ver. Mar 31, 2022</h5>
     </div>  
       
     <!-- SELECTION AREA -->
@@ -102,12 +102,17 @@
     <div id="machineSection">
         <div style="text-align:center">MACHINE SECTION</div>
         <!-- LIST INSTRUCTORS OR MEMBERS -->
-        <div id="instructorsORmembers" style="text-align:center">
+        <div id="instructorsORmembersBtns">
             <button id="machineInstructorBtn" class="btn btn-sm btn-primary">Instructors</button>
             <button id="machineMemberBtn" class="btn btn-sm btn-success">Members</button>
         </div>
         <!-- MACHINE DATA -->
         <!-- machineID   machineDesc   machineLocation -->
+    </div>
+    <div id="machineInstructors">
+
+    </div>
+    <div id="machineMembersCertified">
 
     </div>
 
