--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,7 +15,7 @@
 
     <!-- VERSION SECTION -->
     <div class="version">
-        <h5>ver. Mar 31, 2022</h5>
+        <h5>ver. Apr 1, 2022</h5>
     </div>  
       
     <!-- SELECTION AREA -->
@@ -106,14 +106,11 @@
             <button id="machineInstructorBtn" class="btn btn-sm btn-primary">Instructors</button>
             <button id="machineMemberBtn" class="btn btn-sm btn-success">Members</button>
         </div>
-        <!-- MACHINE DATA -->
-        <!-- machineID   machineDesc   machineLocation -->
-    </div>
-    <div id="machineInstructors">
-
-    </div>
-    <div id="machineMembersCertified">
-
+        <!-- MEMBERS CERTIFIED -->
+        <div id="membersCertified"></div>
+    
+        <!-- MACHINE INSTRUCTORS -->
+        <div id="machineInstructors"></div>
     </div>
 
     <div id="memberSection">
