--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -101,16 +101,12 @@
 
     <div id="machineSection">
         <div style="text-align:center">MACHINE SECTION</div>
-        <!-- LIST INSTRUCTORS OR MEMBERS -->
-        <div id="instructorsORmembersBtns">
-            <button id="machineInstructorBtn" class="btn btn-sm btn-primary">Instructors</button>
-            <button id="machineMemberBtn" class="btn btn-sm btn-success">Members</button>
+        <div id="machineInstructorsAndMembers">
+            <!-- MACHINE INSTRUCTORS -->
+            <div id="machineInstructors">Instructors</div>
+            <!-- MEMBERS CERTIFIED -->
+            <div id="membersCertified">Members Certified</div>
         </div>
-        <!-- MEMBERS CERTIFIED -->
-        <div id="membersCertified"></div>
-    
-        <!-- MACHINE INSTRUCTORS -->
-        <div id="machineInstructors"></div>
     </div>
 
     <div id="memberSection">
