--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -101,12 +101,7 @@
 
     <div id="machineSection">
         <div style="text-align:center">MACHINE SECTION</div>
-        <div id="machineInstructorsAndMembers">
-            <!-- MACHINE INSTRUCTORS -->
-            <div id="machineInstructors">Instructors</div>
-            <!-- MEMBERS CERTIFIED -->
-            <div id="membersCertified">Members Certified</div>
-        </div>
+        <div id="machineInstructorsAndMembers"></div>
     </div>
 
     <div id="memberSection">
