--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,7 +15,7 @@
 
     <!-- VERSION SECTION -->
     <div class="version">
-        <h5>ver. Apr 1, 2022</h5>
+        <h5>ver. Apr 4, 2022</h5>
     </div>  
       
     <!-- SELECTION AREA -->
@@ -69,7 +69,7 @@
             {% for mbr in memberList %}
                 <option  
                     class="optMembers" 
-                    data-villageID={{mbr.villageID}}
+                    data-villageid={{mbr.villageID}}
                     value={{mbr.memberDisplayName}}>
                     {{mbr.memberDisplayName}}
                 </option>
