--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -77,7 +77,7 @@
         </select>
     </div>
     
-     <!--list of instructors -->
+     <!--List of instructors -->
      <div class="instructors" >
         <!-- <label for="instructorSelected">Instructor data: </label> -->
         <select 
@@ -106,6 +106,7 @@
 
     <div id="memberSection">
         <div style="text-align:center">MEMBER SECTION</div>
+        <div id="memberData"></div>
         <!-- MEMBERS CERTIFIED FOR THIS MACHINE -->
         <!-- last, first (nick)  member ID -->
 
@@ -122,6 +123,7 @@
     
     <div id="instructorSection">
         <div style="text-align:center">INSTRUCTOR SECTION</div>
+        <div id="instructorData"></div>
         <!-- MEMBERS OF machineCertificationStaff -->
         <!-- last, first (nick)  member ID -->
 
