--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,7 +15,7 @@
 
     <!-- VERSION SECTION -->
     <div class="version">
-        <h5>ver. Apr 4, 2022</h5>
+        <h5>ver. Apr 7, 2022</h5>
     </div>  
       
     <!-- SELECTION AREA -->
@@ -109,7 +109,24 @@
         <div id="memberData"></div>
         <!-- MEMBERS CERTIFIED FOR THIS MACHINE -->
         <!-- last, first (nick)  member ID -->
-
+        <table style="margin:auto">
+            <caption style="caption-side:top;text-align:center">
+                Richard (Dick) Hartley
+            </caption>
+            
+            <tr>
+                <td>Home phone:  </td>
+                <td style="text-align:right">352-391-7894</td>
+            </tr>
+            <tr>
+                <td>Mobile phone:  </td>
+                <td style="text-align:right">352-391-7894</td>
+            </tr>
+            <tr>
+                <td>Email:  </td>
+                <td style="text-align:right">hartl1r@gmail.com</td>
+            </tr>
+        </table>
 
         <!-- MEMBER DATA -->
         <!-- last, first (nick)  member ID -->
@@ -132,7 +149,24 @@
         <!-- home phone -->
         <!-- mobile phone -->
         <!-- email -->
+        <div id="instructorMachines"></div>
+            <!-- <br> -->
+            <!-- <div class="row">
+                <div class="col-3">Can Certify</div>
+                <div class="col-5">Machine</div>
+                <div class="col-1">Location</div>
+            </div>
+            <br> -->
+            <!-- <div id="instructorMachinesDetail"> -->
+                <!-- <div class="row">
+                    <input class='col-3 canCertify' type="checkbox" checked>
+                    <div class="col-5 clsMachineDesc">Sample (E000000)</div>
+                    <div class="col-1 clsMachineLocation">BW</div>
+                    <div id='E000000' class="clsMachineID" style="display:none">E000000</div>
+                </div> -->
 
+            <!-- </div> -->
+        
         <!-- LIST ALL MACHINES WITH CHECKBOX FOR WHICH INSTRUCTOR MAY CERTIFY -->
         <!-- checkbox    machineID    machineDesc    machineLocation -->
     </div>  
